chore: avoid truncate list search

--- a/template/scss/custom-css/_styles.scss
+++ b/template/scss/custom-css/_styles.scss
@@ -743,3 +743,7 @@ color: #fff !important;
 #topSlide li:last-child a {
   font-size: 12px !important;
 }
+
+.search-engine__filter .text-truncate {
+  white-space: unset !important;
+}
